fixed indicator overflow issue

--- a/src/app/layout/indicator/indicator.component.css
+++ b/src/app/layout/indicator/indicator.component.css
@@ -2,6 +2,15 @@
     float: right;
 }
 
+.card-block {
+    margin: 20px;
+}
+
+.card {
+    height: auto;
+    margin-bottom: 100px;
+}
+
 p {
     float:left;
 }
